overflow issues

--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,7 @@ a {
 .landing-page {
   height:100vh;
   height:calc(var(--vh, 1vh) * 100);
+  overflow:hidden;
   max-width: 100vw;
   display:flex;
   position:relative;
